# hexse

./: __init__.py
commons/: definitions.py
freeze_graphs/: freeze_graph_main.py  optimize_inference.py  run_freezed_graph.py
freeze_graphs/cpp/: CMakeLists.txt  NNEvaluate.cpp  NNEvaluate.hpp  Test.cxx  plaincnn-constgraph-500.pb
neuralnet/: evaluate_nn.py  plaincnn.py  plaincnn_batch_norm.py  policy_gradient.py  policy_gradient2.py  policy_gradient3.py  resnet.py
play/: gtpinterface.py  nn_agent.py
play/tournaments/: __init__.py  play_tournament.py  run_tournament.py  wrapper.py
scripts/: 9x9openings.txt  batchgetconst.sh  nnvswolve.sh  run_nn.sh
utils/: hexutils.py  input_data_util.py  plot_accuracy.py
